# AllTheBest

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
myapp/: __init__.py  development.json  testing.json  user.py
myapp/api/: index.py
myapp/db/: manager_exception.py  supabase_category_manager.py  supabase_postgres_manager.py  supabase_score_manager.py  supabase_thing_manager.py  supabase_user_manager.py  supabase_vote_manager.py
myapp/errors/: authentication_error.py  db_state_error.py  error_categorizer.py
myapp/models/: category.py  profile.py  score.py  thing.py  user.py  vote.py
myapp/static/scripts/: add-category.js  add-form.js  add-things.js  api.js  app.js  categories.js  form-helpers.js  search.js  upvote.js  vote-form.js
myapp/static/styles/: styles.css
myapp/templates/: add-category.html  add-form.html  add-things.html  base.html  categories.html  category.html  home.html  login.html  profile.html  server-error.html  signup.html  thing.html  things.html  users.html  vote-form.html  vote.html
myapp/templates/partials/: profile_thing_card.html  thing_cards.html  vote-form.html
tests/: test_profile_votes.py  test_search_routes.py
