[project]
name = "allthebest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "cbor2==6.1.3",
    "certifi==2026.6.17",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "python-dotenv==1.2.2",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "uv==0.11.27",
    "vercel==0.6.0",
    "vercel-headers==0.6.0",
    "vercel-oidc==0.6.0",
    "vercel-workers==0.0.25",
    "websockets==16.0",
]
