[project]
name = "allthebest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "blinker==1.9.0",
    "cbor2==6.1.3",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==49.0.0",
    "deprecation==2.1.0",
    "dotenv==0.9.9",
    "filelock==3.29.4",
    "flask==3.1.3",
    "flask-login==0.6.3",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.5.1",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.21.0",
    "hyperframe==6.1.0",
    "idna==3.18",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "narwhals==2.23.0",
    "networkx==3.6.1",
    "numpy==2.5.0",
    "packaging==26.2",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "postgrest==2.31.0",
    "propcache==0.5.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pytest==9.1.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "realtime==2.31.0",
    "regex==2026.6.28",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "sentence-transformers==5.6.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "storage3==2.31.0",
    "strenum==0.4.15",
    "supabase==2.31.0",
    "supabase-auth==2.31.0",
    "supabase-functions==2.31.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.12.1",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uv==0.11.27",
    "vercel==0.6.0",
    "vercel-headers==0.6.0",
    "vercel-oidc==0.6.0",
    "vercel-workers==0.0.25",
    "websockets==15.0.1",
    "werkzeug==3.1.8",
    "yarl==1.24.2",
]
